--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <title>Challenge: Famous font formats</title>
   <style>
-    .declaration {
 
+    .declaration {
+      font: italic 13px fantasy
     }
 
     .quote {
-      
+      font: italic 13px fantasy
     }
   </style>
 </head>
